unpackaged/main/default/objects/litify__lp_Plans_Settings__c/litify__lp_Plans_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for Plans</description>
    <label>Plans Settings</label>
</CustomObject>