unpackaged/main/default/objects/litify__lp_Plans_Settings__c/fields/litify__lp_Rule_Builder_Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Rule_Builder_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rule Builder Enabled</label>
    <type>Checkbox</type>
</CustomField>