unpackaged/main/default/objects/litify__lp_Plans_Settings__c/fields/litify__lp_Track_Member_Assignment__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Track_Member_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Member Assignment</label>
    <type>Checkbox</type>
</CustomField>