unpackaged/main/default/objects/litify__lp_Plans_Settings__c/fields/litify__lp_Triggers_Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Triggers_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Triggers</label>
    <type>Checkbox</type>
</CustomField>